added extra div to form section

--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@
     <script src="https://kit.fontawesome.com/cdc49ed55f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>Organic | Juno College Project One</title>
-    <link href="../styles/style.css" rel="stylesheet">
+    <link href="./styles/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- beginning of header section -->
-    <header>
+    <header class="headerContact">
         <nav class="flexRow">
             <div class="wrapper flexRow">
                 <a href="#">
@@ -48,7 +48,7 @@
     <!-- beginning of contact section -->
     <section id="contact" class="contact">
         <div class="wrapper flexRow">
-            <ul class="textContainer contactInfo">
+            <ul class="textContainer contactContainer">
                 <li>
                     <h3>Office address</h3>
                     <p>3812 Lena Lane City Jackson Mississippi</p>
@@ -62,29 +62,31 @@
                     <p>4cfdx9dye9e@temporary-mail.net</p>
                 </li>
             </ul>
-            <div class="textContainer contactForm">
+            <div class="textContainer formContainer">
                 <form action="#" method="#" name="contactForm">
-                    <div>
+                    <div class="row1">
                         <label for="name" class="sr-only">Enter your name</label>
                         <input type="text" id="name" class="name" name="name" placeholder="Your full name*" required>
                         <label for="email" class="sr-only">Enter yout email</label>
                         <input type="text" id="email" class="email" name="email" placeholder="Your email address*" required>
                     </div>
-                    <div>
+                    <div class="row2">
                         <label for="phone" class="sr-only">Enter your phone number</label>
                         <input type="text" id="phone" class="phone" name="phone" placeholder="Your phone number">
                         <label for="website" class="sr-only">Enter your website</label>
                         <input type="text" id="website" class="website" name="website" placeholder="Your website link">
                     </div>
-                    <div>
+                    <div class="row3">
                         <label for="subject" class="sr-only">Enter message subject</label>
                         <input type="text" id="subject" class="subject" name="subject" placeholder="Subject...">
                     </div>
-                    <div>
+                    <div class="row4">
                         <label for="mesages" class="sr-only">Enter message</label>
-                        <textarea name="userMessage" id="message" class="message" placeholder="Your message" required></textarea>
+                        <textarea name="userMessage" id="message" class="message" cols="55" rows="8" placeholder="Your message" required></textarea>
                     </div>
                 </form>
+            <div>
+                <button type="submit">Send message</button>
             </div>
         </div>
     </section>
