added <a> to hamburger menu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                         </a>
                     </li>
                 </ul>
-                <i class="fa-solid fa-bars hamburger"></i>        
+                <a class="hamburgerContainer" href="#">
+                    <i class="fa-solid fa-bars hamburger"></i>
+                </a>
             </div>
         </nav>
         <div class="hero parallax flexRow">
