--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <img src="./assets/logo.png" alt="#">
                 </a>
                 <ul class="flexRow">
-                    <li>
+                    <li class="navHover">
                         <a href="#">Home</a>
                     </li>
-                    <li>
+                    <li class="navHover">
                         <a href="#">Blog</a>
                     </li>
-                    <li>
+                    <li class="navHover">
                         <a href="./contact.html">Contact</a>
                     </li>
                     <li>
@@ -75,7 +75,7 @@
         <!-- end of about section -->
 
         <!-- beginning of product section -->
-        <section id="shop" class="shop">
+        <section id="shop" class="shop parallax">
             <div class="wrapper">
                 <div class="sectionHeading">
                     <h2>Our products</h2>
