added alt text to images and updated class names in gallery and form sections

--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,11 @@
         <nav class="flexRow">
             <div class="wrapper flexRow">
                 <a href="#">
-                    <img src="./assets/logo.png" alt="#">
+                    <img src="./assets/logo.png" alt="Oreg logo.">
                 </a>
                 <ul class="flexRow">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="./index.html">Home</a>
                     </li>
                     <li>
                         <a href="#">Blog</a>
@@ -66,21 +66,21 @@
             </ul>
             <div class="textContainer">
                 <form action="#" method="#" name="contactForm">
-                    <div class="row1and2 flexRow">
+                    <div class="line1and2 flexRow">
                         <label for="name" class="sr-only">Enter your name</label>
                         <input type="text" id="name" class="name" name="name" placeholder="Your full name*" required>
-                        <label for="email" class="sr-only">Enter yout email</label>
+                        <label for="email" class="sr-only">Enter your email</label>
                         <input type="text" id="email" class="email" name="email" placeholder="Your email address*" required>
                         <label for="phone" class="sr-only">Enter your phone number</label>
                         <input type="text" id="phone" class="phone" name="phone" placeholder="Your phone number">
                         <label for="website" class="sr-only">Enter your website</label>
                         <input type="text" id="website" class="website" name="website" placeholder="Your website link">
                     </div>
-                    <div class="row3">
+                    <div class="line3">
                         <label for="subject" class="sr-only">Enter message subject</label>
                         <input type="text" id="subject" class="subject" name="subject" placeholder="Subject...">
                     </div>
-                    <div class="row4">
+                    <div class="line4">
                         <label for="mesages" class="sr-only">Enter message</label>
                         <textarea name="userMessage" id="message" class="message" cols="55" rows="8" placeholder="Your message..." required></textarea>
                     </div>
@@ -96,7 +96,7 @@
         <div class="wrapper flexRow">
             <div class="footerCol first">
                 <div class="imageContainer">
-                    <img src="./assets/logo-white.png">
+                    <img src="./assets/logo-white.png" alt="Oreg logo.">
                 </div>
                 <div class="division">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
@@ -156,7 +156,7 @@
                 <ul class="division">
                     <li class="flexRow">
                         <div class="imageContainer">
-                            <img src="./assets/product8.jpeg" alt="#">
+                            <img src="./assets/product8.jpeg" alt="Organic Boston lettuce.">
                         </div>
                         <div class="textContainer">
                             <p class="item">Fresh vegetable</p>
@@ -165,7 +165,7 @@
                     </li>
                     <li class="flexRow">
                         <div class="imageContainer">
-                            <img src="./assets/product7.jpeg" alt="#">
+                            <img src="./assets/product7.jpeg" alt="Organic green cabbage.">
                         </div>
                         <div class="textContainer">
                             <p class="item">Fresh fruit</p>
@@ -174,7 +174,7 @@
                     </li>
                     <li class="flexRow">
                         <div class="imageContainer">
-                            <img src="./assets/product5.jpeg" alt="#">
+                            <img src="./assets/product5.jpeg" alt="Organic snap peas.">
                         </div>
                         <div class="textContainer">
                             <p class="item">Fresh bean</p>
