--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <nav class="flexRow">
             <div class="wrapper flexRow">
                 <a href="#">
-                    <img src="./assets/logo.png" alt="#">
+                    <img src="./assets/logo.png" alt="Oreg logo">
                 </a>
                 <ul class="flexRow">
                     <li class="navHover">
-                        <a href="#">Home</a>
+                        <a href="./index.html">Home</a>
                     </li>
                     <li class="navHover">
                         <a href="#">Blog</a>
@@ -48,7 +48,7 @@
                     <button class="btnVar2">Shop Now</button>
                 </div>
                 <div class="imageContainer">
-                    <img class="animate" src="./assets/header/header.png" alt="#">
+                    <img class="animate" src="./assets/header/header.png" alt="Fresh organic papaya stuffed with berries on a plate.">
                 </div>                
             </div>
         </div>
@@ -84,7 +84,7 @@
                 <ul class="productGallery flexRow">
                     <li>
                         <div class="imageContainer">
-                            <img src="./assets/product1.jpeg" alt="#">
+                            <img src="./assets/product1.jpeg" alt="Assorted fresh organic vegetables.">
                         </div>
                         <div class="textContainer">
                             <h3>Mix Vegetables</h3>
@@ -95,7 +95,7 @@
                     </li>
                     <li>
                         <div class="imageContainer">
-                            <img src="./assets/product2.jpeg" alt="#">
+                            <img src="./assets/product2.jpeg" alt="Organic limes.">
                         </div>
                         <div class="textContainer">
                             <h3>Mix Vegetables</h3>
@@ -106,7 +106,7 @@
                     </li>
                     <li>
                         <div class="imageContainer">
-                            <img src="./assets/product3.jpeg" alt="#">
+                            <img src="./assets/product3.jpeg" alt="Organic green eggplant.">
                         </div>
                         <div class="textContainer">
                             <h3>Mix Vegetables</h3>
@@ -117,7 +117,7 @@
                     </li>
                     <li>
                         <div class="imageContainer">
-                            <img src="./assets/product4.jpeg" alt="#">
+                            <img src="./assets/product4.jpeg" alt="Organic zucchini.">
                         </div>
                         <div class="textContainer">
                             <h3>Mix Vegetables</h3>
@@ -130,7 +130,7 @@
                 <ul class="productGallery flexRow">
                     <li>
                         <div class="imageContainer">
-                            <img src="./assets/product5.jpeg" alt="#">                            
+                            <img src="./assets/product5.jpeg" alt="Organic snap peas.">                            
                         </div>
                         <div class="textContainer">
                             <h3>Mix Vegetables</h3>
@@ -141,7 +141,7 @@
                     </li>
                     <li>
                         <div class="imageContainer">
-                            <img src="./assets/product6.jpeg" alt="#">
+                            <img src="./assets/product6.jpeg" alt="Organic green olives.">
                         </div>
                         <div class="textContainer">
                             <h3>Mix Vegetables</h3>
@@ -152,7 +152,7 @@
                     </li>
                     <li>
                         <div class="imageContainer">
-                            <img src="./assets/product7.jpeg" alt="#">
+                            <img src="./assets/product7.jpeg" alt="Organic green cabbage.">
                         </div>
                         <div class="textContainer">
                             <h3>Mix Vegetables</h3>
@@ -163,7 +163,7 @@
                     </li>
                     <li>
                         <div class="imageContainer">
-                            <img src="./assets/product8.jpeg" alt="#">
+                            <img src="./assets/product8.jpeg" alt="Organic Boston lettuce.">
                         </div>
                         <div class="textContainer">
                             <h3>Mix Vegetables</h3>
@@ -197,34 +197,34 @@
                 </div>
                 <div class="mainGallery">
                     <!-- is ul the right choice here or should you apply a div? -->
-                    <ul class="col3 flexRow">
+                    <ul class="row3 flexRow">
                         <li>
-                            <img src="./assets/gallery1.jpg" alt="">
+                            <img src="./assets/gallery1.jpg" alt="Organic red apple in the palm of a hand.">
                         </li>
                         <li>
-                            <img src="./assets/gallery2.jpg" alt="">
+                            <img src="./assets/gallery2.jpg" alt="Cross section of a rustic sandwich with deli meat and cheese.">
                         </li>
                         <li>
-                            <img src="./assets/gallery3.jpg" alt="">
-                        </li>
-                    </ul>
-                    <ul class="col2 flexRow">
-                        <li>
-                            <img src="./assets/gallery4.jpg" alt="">
-                        </li>
-                        <li>
-                            <img src="./assets/gallery5.jpg" alt="">
+                            <img src="./assets/gallery3.jpg" alt="Grocery haul of assorted organic fruits, veggies and flowers on a table. ">
                         </li>
                     </ul>
-                    <ul class="col3 flexRow">
+                    <ul class="row2 flexRow">
                         <li>
-                            <img src="./assets/gallery6.jpg" alt="">
+                            <img src="./assets/gallery4.jpg" alt="Man on a farm hollding a basket of freshly picked assorted organic vegetables.">
                         </li>
                         <li>
-                            <img src="./assets/gallery7.jpg" alt="">
+                            <img src="./assets/gallery5.jpg" alt="Organic brown eggs in a bowl and on the table.">
+                        </li>
+                    </ul>
+                    <ul class="row3 flexRow">
+                        <li>
+                            <img src="./assets/gallery6.jpg" alt="A basket of organic root vegetables on a wood plank floor.">
                         </li>
                         <li>
-                            <img src="./assets/gallery8.jpg" alt="">
+                            <img src="./assets/gallery7.jpg" alt="Organic carrots and parnips on display at the farmers' market.">
+                        </li>
+                        <li>
+                            <img src="./assets/gallery8.jpg" alt="Organic carrots just pulled from the soil.">
                         </li>
                     </ul>
                 </div>
@@ -245,7 +245,7 @@
                 <ul class="flexRow">
                     <li class="blogPost">
                         <div class="imageContainer">
-                            <img src="./assets/blog1.jpg">
+                            <img src="./assets/blog1.jpg" alt="Assorted organic fruits and vegetables">
                         </div>
                         <div class="textContainer">
                             <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
@@ -255,7 +255,7 @@
                     </li>
                     <li class="blogPost">
                         <div class="imageContainer">
-                            <img src="./assets/blog2.jpg">
+                            <img src="./assets/blog2.jpg" alt="A box filled with organic fresh fruits.">
                         </div>
                         <div class="textContainer">
                             <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
@@ -265,7 +265,7 @@
                     </li>
                     <li class="blogPost">
                         <div class="imageContainer">
-                            <img src="./assets/blog3.jpg">
+                            <img src="./assets/blog3.jpg" alt="Assorted fresh herbs and dried spices on a wooden table.">
                         </div>
                         <div class="textContainer">
                             <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
@@ -329,7 +329,7 @@
                             <a href="#">Our blog</a>
                         </li>
                         <li>
-                            <a href="#">Contact us</a>
+                            <a href="./contact.html">Contact us</a>
                         </li>
                         <li>
                             <a href="#">Become a member</a>
@@ -345,7 +345,7 @@
                 <ul class="division">
                     <li class="flexRow">
                         <div class="imageContainer">
-                            <img src="./assets/product8.jpeg" alt="#">
+                            <img src="./assets/product8.jpeg" alt="Organic Boston lettuce.">
                         </div>
                         <div class="textContainer">
                             <p class="item">Fresh vegetable</p>
@@ -354,7 +354,7 @@
                     </li>
                     <li class="flexRow">
                         <div class="imageContainer">
-                            <img src="./assets/product7.jpeg" alt="#">
+                            <img src="./assets/product7.jpeg" alt="Organic green cabbage.">
                         </div>
                         <div class="textContainer">
                             <p class="item">Fresh fruit</p>
@@ -363,7 +363,7 @@
                     </li>
                     <li class="flexRow">
                         <div class="imageContainer">
-                            <img src="./assets/product5.jpeg" alt="#">
+                            <img src="./assets/product5.jpeg" alt="Organic snap peas.">
                         </div>
                         <div class="textContainer">
                             <p class="item">Fresh bean</p>
