added filter to banner

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,8 @@
                 </a>     
             </div>
         </nav>
-        <div class="contactBanner">
-            <h2>Contact Us</h2>
-        </div>    
+        <div class="contactBanner"></div>
+        <h2>Contact Us</h2>    
     </header>
     <!-- end of header section -->
 
