--- a/index.html
+++ b/index.html
@@ -126,8 +126,6 @@
                             <button>Add to cart</button>
                         </div>
                     </li>
-                </ul>
-                <ul class="productGallery flexRow">
                     <li>
                         <div class="imageContainer">
                             <img src="./assets/product5.jpeg" alt="Organic snap peas.">                            
@@ -150,7 +148,7 @@
                             <button>Add to cart</button>
                         </div>
                     </li>
-                    <li>
+                    <li class="hide">
                         <div class="imageContainer">
                             <img src="./assets/product7.jpeg" alt="Organic green cabbage.">
                         </div>
@@ -161,7 +159,7 @@
                             <button>Add to cart</button>
                         </div>
                     </li>
-                    <li>
+                    <li class="hide">
                         <div class="imageContainer">
                             <img src="./assets/product8.jpeg" alt="Organic Boston lettuce.">
                         </div>
@@ -340,7 +338,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="footerCol third">
+            <div class="footerCol third hide768px">
                 <h3>Recent products</h3>
                 <ul class="division">
                     <li class="flexRow">
