replaced svg tags with img tags and updated top nav for media queries

--- a/contact.html
+++ b/contact.html
@@ -17,27 +17,25 @@
         <nav class="flexRow">
             <div class="wrapper flexRow">
                 <a href="#">
-                    <img src="./assets/logo.png" alt="Oreg logo.">
+                    <img src="./assets/logo.png" alt="Oreg logo">
                 </a>
                 <ul class="flexRow">
-                    <li>
+                    <li class="navHover navHide">
                         <a href="./index.html">Home</a>
                     </li>
-                    <li>
+                    <li class="navHove navHide">
                         <a href="#">Blog</a>
                     </li>
-                    <li>
+                    <li class="navHover navHide">
                         <a href="./contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="#">
-                            <svg width="64" height="64" viewBox="0 0 64 64" fill="#1A2428" xmlns="http://www.w3.org/2000/svg"><path d="M61.58 12.88C61.3937 12.638 61.1544 12.4419 60.8805 12.3067C60.6066 12.1715 60.3054 12.1008 60 12.1H14.26L11.89 5.15004C11.7564 4.75442 11.5023 4.41054 11.1633 4.16664C10.8244 3.92274 10.4176 3.79105 10 3.79004H4C3.46957 3.79004 2.96086 4.00075 2.58579 4.37583C2.21071 4.7509 2 5.25961 2 5.79004C2 6.32047 2.21071 6.82918 2.58579 7.20425C2.96086 7.57933 3.46957 7.79004 4 7.79004H8.57L21.72 46.44C21.8553 46.8338 22.1101 47.1755 22.449 47.4175C22.7878 47.6595 23.1936 47.7897 23.61 47.79H52C52.5304 47.79 53.0391 47.5793 53.4142 47.2043C53.7893 46.8292 54 46.3205 54 45.79C54 45.2596 53.7893 44.7509 53.4142 44.3758C53.0391 44.0008 52.5304 43.79 52 43.79H25L23.54 39.48H54C54.4414 39.482 54.8709 39.3379 55.2219 39.0702C55.5728 38.8025 55.8253 38.4262 55.94 38L61.94 14.62C62.0181 14.3219 62.0263 14.0097 61.9638 13.7079C61.9014 13.406 61.77 13.1227 61.58 12.88V12.88Z" fill="black" id="id_107"></path><path d="M29.9999 49.4902C22.9199 49.7102 22.9199 59.9802 29.9999 60.2102C37.0799 60.0002 37.0799 49.7102 29.9999 49.4902Z" fill="black" id="id_108"></path><path d="M47.4101 49.4902C40.3301 49.7102 40.3301 59.9802 47.4101 60.2102C54.4901 60.0002 54.4901 49.7102 47.4101 49.4902Z" fill="black" id="id_109"></path></svg>
-                        </a>
+                        <img src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
                     </li>
                 </ul>
                 <a class="hamburgerContainer" href="#">
                     <i class="fa-solid fa-bars hamburger"></i>
-                </a>     
+                </a>
             </div>
         </nav>
         <div class="contactBanner"></div>
@@ -95,7 +93,7 @@
         <div class="wrapper flexRow">
             <div class="footerCol first">
                 <div class="imageContainer">
-                    <img src="./assets/logo-white.png" alt="Oreg logo.">
+                    <img src="./assets/logo-white.png">
                 </div>
                 <div class="division">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
@@ -103,22 +101,22 @@
                         <ul class="flexRow">
                             <li>
                                 <a href="#">
-                                    <svg viewBox="0 0 25 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Facebook</title><desc>Created with Sketch.</desc><defs></defs><g id="Page-1" stroke="#207200" stroke-width="1" fill="#207200" fill-rule="evenodd"><g id="Social-Icons---Isolated" transform="translate(-176.000000, -55.000000)" fill="#4460A0"><path d="M200.78439,55.3395122 L200.78439,62.9141463 L196.28878,62.9258537 C192.764878,62.9258537 192.085854,64.6 192.085854,67.0468293 L192.085854,72.4673171 L200.48,72.4673171 L199.39122,80.9434146 L192.085854,80.9434146 L192.085854,103 L183.329951,103 L183.329951,80.9434146 L176,80.9434146 L176,72.4673171 L183.329951,72.4673171 L183.329951,66.2156098 C183.329951,58.9570732 187.754146,55 194.24,55 C197.331902,55 200,55.2341463 200.78439,55.3395122 Z" id="Facebook" style="fill: rgb(255, 255, 255);"></path></g></g></svg>
+                                    <img class="svg" src="./assets/icons/facebook.svg" alt="facebook icon">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5" id="id_128" style="stroke: rgb(255, 255, 255);"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" id="id_129" style="stroke: rgb(255, 255, 255);"></path><line x1="17.5" y1="6.5" x2="17.5" y2="6.5" id="id_130" style="stroke: rgb(255, 255, 255);"></line></svg>                            
+                                    <img class="svg" src="./assets/icons/instagram.svg" alt="instagram icon">                         
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <svg viewBox="0 0 48 34" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Youtube</title><desc>Created with Sketch.</desc><defs></defs><g id="Page-1" stroke="#207200" stroke-width="1" fill="#207200" fill-rule="evenodd"><g id="Social-Icons---Isolated" transform="translate(-164.000000, -510.000000)" fill="#FF0002"><path d="M183.044,533.269916 L183.0425,519.687742 L196.0115,526.502244 L183.044,533.269916 Z M211.52,517.334163 C211.52,517.334163 211.0505,514.003199 209.612,512.536366 C207.7865,510.610299 205.7405,510.601235 204.803,510.489448 C198.086,510 188.0105,510 188.0105,510 L187.9895,510 C187.9895,510 177.914,510 171.197,510.489448 C170.258,510.601235 168.2135,510.610299 166.3865,512.536366 C164.948,514.003199 164.48,517.334163 164.48,517.334163 C164.48,517.334163 164,521.246723 164,525.157773 L164,528.82561 C164,532.73817 164.48,536.64922 164.48,536.64922 C164.48,536.64922 164.948,539.980184 166.3865,541.447016 C168.2135,543.373084 170.612,543.312658 171.68,543.513574 C175.52,543.885191 188,544 188,544 C188,544 198.086,543.984894 204.803,543.495446 C205.7405,543.382148 207.7865,543.373084 209.612,541.447016 C211.0505,539.980184 211.52,536.64922 211.52,536.64922 C211.52,536.64922 212,532.73817 212,528.82561 L212,525.157773 C212,521.246723 211.52,517.334163 211.52,517.334163 L211.52,517.334163 Z" id="Youtube" style="fill: rgb(255, 255, 255);"></path></g></g></svg>
+                                   <img class="svg" src="./assets/icons/youtube.svg" alt="youtube icon">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 545 545" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path style="fill: #fff;" d="M512,97.248c-19.04,8.352-39.328,13.888-60.48,16.576c21.76-12.992,38.368-33.408,46.176-58.016c-20.288,12.096-42.688,20.64-66.56,25.408C411.872,60.704,384.416,48,354.464,48c-58.112,0-104.896,47.168-104.896,104.992c0,8.32,0.704,16.32,2.432,23.936c-87.264-4.256-164.48-46.08-216.352-109.792c-9.056,15.712-14.368,33.696-14.368,53.056c0,36.352,18.72,68.576,46.624,87.232c-16.864-0.32-33.408-5.216-47.424-12.928c0,0.32,0,0.736,0,1.152c0,51.008,36.384,93.376,84.096,103.136c-8.544,2.336-17.856,3.456-27.52,3.456c-6.72,0-13.504-0.384-19.872-1.792c13.6,41.568,52.192,72.128,98.08,73.12c-35.712,27.936-81.056,44.768-130.144,44.768c-8.608,0-16.864-0.384-25.12-1.44C46.496,446.88,101.6,464,161.024,464c193.152,0,298.752-160,298.752-298.688c0-4.64-0.16-9.12-0.384-13.568C480.224,136.96,497.728,118.496,512,97.248z" id="id_101"></path><g></g></svg>
+                                    <img class="svg" src="./assets/icons/twitter.svg" alt="twitter icon">
                                 </a>
                             </li>
                         </ul>
