--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                     <li class="navHover navHide">
                         <a href="./index.html">Home</a>
                     </li>
-                    <li class="navHove navHide">
+                    <li class="navHover navHide">
                         <a href="#">Blog</a>
                     </li>
                     <li class="navHover navHide">
                         <a href="./contact.html">Contact</a>
                     </li>
                     <li>
-                        <img src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
+                        <img class="svg" src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
                     </li>
                 </ul>
                 <a class="hamburgerContainer" href="#">
