added footer image

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <div class="wrapper flexRow">
             <div class="footerCol first">
                 <div class="imageContainer">
-                    <img src="./assets/logo-white.png">
+                    <img src="./assets/logo-white.png" alt="Oreg logo.">
                 </div>
                 <div class="division">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
@@ -380,6 +380,9 @@
                     </form>
                 </div>
             </div>
+        </div>
+        <div class="footerImage">
+            <img src="./assets/cow.png" alt="cows in a field">
         </div>
         <p class="copyright">Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
     </footer>
