--- a/contact.html
+++ b/contact.html
@@ -43,50 +43,53 @@
     </header>
     <!-- end of header section -->
 
-    <!-- do you need a main tag here? -->
-    <!-- beginning of contact section -->
-    <section id="contact" class="contact">
-        <div class="wrapper flexRow">
-            <ul class="textContainer contactContainer">
-                <li>
-                    <h3>Office address</h3>
-                    <p>3812 Lena Lane City Jackson Mississippi</p>
-                </li>
-                <li>
-                    <h3>Phone number </h3>
-                    <p>601-594-3405</p>
-                </li>
-                <li>
-                    <h3>Email</h3>
-                    <p>4cfdx9dye9e@temporary-mail.net</p>
-                </li>
-            </ul>
-            <div class="textContainer">
-                <form action="#" method="#" name="contactForm">
-                    <div class="line1and2 flexRow">
-                        <label for="name" class="sr-only">Enter your name</label>
-                        <input type="text" id="name" class="name" name="name" placeholder="Your full name*" required>
-                        <label for="email" class="sr-only">Enter your email</label>
-                        <input type="text" id="email" class="email" name="email" placeholder="Your email address*" required>
-                        <label for="phone" class="sr-only">Enter your phone number</label>
-                        <input type="text" id="phone" class="phone" name="phone" placeholder="Your phone number">
-                        <label for="website" class="sr-only">Enter your website</label>
-                        <input type="text" id="website" class="website" name="website" placeholder="Your website link">
-                    </div>
-                    <div class="line3">
-                        <label for="subject" class="sr-only">Enter message subject</label>
-                        <input type="text" id="subject" class="subject" name="subject" placeholder="Subject...">
-                    </div>
-                    <div class="line4">
-                        <label for="mesages" class="sr-only">Enter message</label>
-                        <textarea name="userMessage" id="message" class="message" cols="55" rows="8" placeholder="Your message..." required></textarea>
-                    </div>
-                    <button type="submit">Send message</button>
-                </form>
-            <div>
-        </div>
-    </section>
-    <!-- end of contact section -->
+    <!-- beginning of main section-->
+    <main>
+        <!-- beginning of contact section -->
+        <section id="contact" class="contact">
+            <div class="wrapper flexRow">
+                <ul class="textContainer contactContainer">
+                    <li>
+                        <h3>Office address</h3>
+                        <p>3812 Lena Lane City Jackson Mississippi</p>
+                    </li>
+                    <li>
+                        <h3>Phone number </h3>
+                        <p>601-594-3405</p>
+                    </li>
+                    <li>
+                        <h3>Email</h3>
+                        <p>4cfdx9dye9e@temporary-mail.net</p>
+                    </li>
+                </ul>
+                <div class="textContainer">
+                    <form action="#" method="#" name="contactForm">
+                        <div class="line1and2 flexRow">
+                            <label for="name" class="sr-only">Enter your name</label>
+                            <input type="text" id="name" class="name" name="name" placeholder="Your full name*" required>
+                            <label for="email" class="sr-only">Enter your email</label>
+                            <input type="text" id="email" class="email" name="email" placeholder="Your email address*" required>
+                            <label for="phone" class="sr-only">Enter your phone number</label>
+                            <input type="text" id="phone" class="phone" name="phone" placeholder="Your phone number">
+                            <label for="website" class="sr-only">Enter your website</label>
+                            <input type="text" id="website" class="website" name="website" placeholder="Your website link">
+                        </div>
+                        <div class="line3">
+                            <label for="subject" class="sr-only">Enter message subject</label>
+                            <input type="text" id="subject" class="subject" name="subject" placeholder="Subject...">
+                        </div>
+                        <div class="line4">
+                            <label for="mesages" class="sr-only">Enter message</label>
+                            <textarea name="userMessage" id="message" class="message" cols="55" rows="8" placeholder="Your message..." required></textarea>
+                        </div>
+                        <button type="submit">Send message</button>
+                    </form>
+                <div>
+            </div>
+        </section>
+        <!-- end of contact section -->
+    </main>
+    <!-- end of main section -->
 
     <!-- beginning of footer section -->
     <footer>
@@ -148,7 +151,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="footerCol third">
+            <div class="footerCol third hide768px">
                 <h3>Recent products</h3>
                 <ul class="division">
                     <li class="flexRow">
