--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <button class="btnVar4">Read more</button>
                         </div>
                     </li>
-                    <li class="blogPost">
+                    <li class="blogPost hide768px">
                         <div class="imageContainer">
                             <img src="./assets/blog3.jpg" alt="Assorted fresh herbs and dried spices on a wooden table.">
                         </div>
